Give Country and State a Min Width Issue #24001
The Country and State fields on the new 4.6 donate page were appearing
far smaller than the options, so Country and State Names were getting
cut off.

--- a/sites/all/themes/cc_zen/sass/components/_donate.scss
+++ b/sites/all/themes/cc_zen/sass/components/_donate.scss
@@ -188,6 +188,7 @@
 
     .select2-choice {
       padding: 0 0 0 8px;
+      min-width: 200px;
     }
 
     .select2-arrow b {
